manifests/bases/access/auth-routes.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-auth
  namespace: access
spec:
  parentRefs:
    - name: local-test
      namespace: default
      sectionName: https-wildcard
  hostnames:
    - hubble.local.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-auth-proxy-oauth2-proxy
          port: 4180
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openobserve-auth
  namespace: access
spec:
  parentRefs:
    - name: local-test
      namespace: default
      sectionName: https-wildcard
  hostnames:
    - openobserve.local.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openobserve-auth-proxy-oauth2-proxy
          port: 4180
